<resources>
    <string name="app_name">MovieApp</string>
    <string name="movies_nav">Movies</string>
    <string name="tv_nav">TV Shows</string>
    <string name="synopsis">Synopsis</string>
    <string name="movie_poster_content_desc">Movie Poster</string>
    <string name="back_button">Back Button</string>
    <string name="detail">Movie Detail</string>
    <string name="fav">Favorite</string>
    <string name="to_fav">Favorite</string>
    <string name="added_to_fav">Added to favorite</string>
    <string name="language_settings">Language settings</string>
    <string name="search">Search</string>
    <string name="reminder">Notification Settings</string>
    <string name="daily_reminder">Daily notification</string>
    <string name="new_reminder">New movies notification</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <!--Movies-->

    <!--Movies-->


    <!--TVShows-->


    <!--TVShows-->

</resources>
