<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_arrow_back_black_24dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:text="@string/detail"
                style="@style/HighlightedAppTitle"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:layout_gravity="end"
                android:textColor="@color/colorAccent"
                android:id="@+id/add_to_fav"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_star_black_24dp"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorYellow"
                android:text="@string/to_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/poster_detail"
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="313dp"
            android:contentDescription="@string/movie_poster_content_desc"
            android:src="@drawable/poster_gotham"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/title_detail"
            style="@style/HighlightedAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/release_date_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toEndOf="@+id/poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Title" />

        <TextView
            android:id="@+id/release_date_detail"
            style="@style/ColoredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/rating_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toEndOf="@+id/poster_detail"
            tools:text="21 December, 2018" />

        <TextView
            android:id="@+id/rating_detail"
            style="@style/ColoredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="132dp"
            android:drawableStart="@drawable/ic_star_black_24dp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorYellow"
            app:layout_constraintBottom_toTopOf="@+id/synopsis_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.032"
            app:layout_constraintStart_toEndOf="@+id/poster_detail"
            tools:text="75" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="80dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toTopOf="@+id/synopsis_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintStart_toEndOf="@+id/poster_detail">

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/HighlightedAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/synopsis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_detail"
            app:layout_constraintVertical_bias="0.0" />



        <TextView
            android:id="@+id/synopsis_detail"
            style="@style/ColoredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="236dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="256dp"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum interdum ante ipsum, a iaculis nisi venenatis eget. Aenean a eleifend velit. Duis bibendum ante auctor diam sagittis, ac luctus enim malesuada. Curabitur laoreet sagittis volutpat. Fusce volutpat nisl lacus, quis placerat ex gravida vel. Mauris aliquam dui a est ultrices, sed accumsan tellus congue. Morbi vel tellus libero. Sed eu lorem ac tortor consectetur porta a vitae ex. Duis ut urna nec erat porttitor efficitur. Vestibulum sit amet tempus dolor. Ut in turpis quis purus pulvinar porta in sed nisi." />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>